; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_throttle_info_ref_by_mask.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_throttle_info_ref_by_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._throttle_io_info_t = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@_throttle_io_info = common dso_local global %struct._throttle_io_info_t* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @throttle_info_ref_by_mask(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct._throttle_io_info_t*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @EINVAL, align 4
  store i32 %11, i32* %3, align 4
  br label %24

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @num_trailing_0(i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** @_throttle_io_info, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %15, i64 %17
  store %struct._throttle_io_info_t* %18, %struct._throttle_io_info_t** %7, align 8
  %19 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %7, align 8
  %20 = call i32 @throttle_info_ref(%struct._throttle_io_info_t* %19)
  %21 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %7, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = bitcast i32* %22 to %struct._throttle_io_info_t**
  store %struct._throttle_io_info_t* %21, %struct._throttle_io_info_t** %23, align 8
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %12, %10
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @num_trailing_0(i32) #1

declare dso_local i32 @throttle_info_ref(%struct._throttle_io_info_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
